Attempt to make resolve() work on Windows